--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -6,12 +6,31 @@
   font-size: 14px;
   line-height: 18px;
   box-sizing: border-box;
-  padding: 10px 0 0;
+  /* padding: 10px 0 0; */
   margin-bottom: 10px;
 }
 
 .popup__input:last-of-type {
   margin-bottom: 0;
+}
+
+.popup__input-type-error {
+  border-bottom-color: red;
+}
+
+.popup__input-error {
+  color: #F00;
+  font-size: 12px;
+  opacity: 0;
+  min-height: 28px; 
+  transition: all 0.3s ease; 
+  display: block;
+  margin-top: 5px;
+}
+
+.form__input-error_active {
+  opacity: 1;
+  
 }
 
 @media screen and (max-width: 568px) {
