--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -19,6 +19,14 @@
   cursor: pointer;
 }
 
+.popup__button-off {
+  color: #000;
+  background: #FFF;
+  pointer-events: none;
+  user-select: none;
+  border: 1px solid #000;
+}
+
 @media screen and (max-width: 568px) {
   .popup__button {
     font-size: 14px;
