--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,12 +1,37 @@
 .profile__image {
+  position: relative;
   width: 120px;
   height: 120px;
+  margin: 0 29px 0 0;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
-  background-size: cover;
   background-position: center;
-  margin: 0 29px 0 0;
+  background-size: cover;
+  transition: box-shadow 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.profile__image::before {
+  content: '';
+  position: absolute;
+  top: 47px;
+  left: 47px;
+  width: 26px;
+  height: 26px; 
+  opacity: 0;
+  background-image: url('/src/images/Vector.png');
+  background-size: contain;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.profile__image:hover::before {
+  opacity: 1;
+}
+
+.profile__image:hover { 
+  transition: box-shadow 0.3s ease-in-out;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);  /* нашёл крутое затемнение */
 }
 
 @media screen and (max-width: 740px) {
